<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/text_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_a"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/text_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_b"
        android:textSize="25dp"
        android:layout_below="@id/text_a"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/yes_button_save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text = "@string/yes_text"
        android:layout_below="@id/text_b"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp" />

    <Button
        android:id="@+id/no_button_save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text = "@string/no_text"
        android:layout_below="@id/text_b"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/yes_button_save"
        android:layout_marginTop="-2dp"
        android:scrollbars="vertical"
        tools:context=".ScannedAP"></TextView>

</RelativeLayout>